// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forAll 1`] = `
Array [
  "./pkg4 one",
  "./pkg3 one",
  "./pkg2 one",
  "./pkg1 one",
  "./pkg4 two",
  "./pkg3 two",
  "./pkg2 two",
  "./pkg1 two",
]
`;

exports[`getGraph 1`] = `
Object {
  "pkg1": Array [],
  "pkg2": Array [
    "pkg1",
  ],
  "pkg3": Array [
    "pkg2",
  ],
  "pkg4": Array [
    "pkg3",
  ],
}
`;

exports[`getPackageNamesInBuildOrder 1`] = `
Array [
  "pkg4",
  "pkg3",
  "pkg2",
  "pkg1",
]
`;

exports[`getProjectsPathsInBuildOrder 1`] = `
Array [
  "./pkg4",
  "./pkg3",
  "./pkg2",
  "./pkg1",
]
`;
